--- a/src/app/components/map/map.scss
+++ b/src/app/components/map/map.scss
@@ -1,3 +1,15 @@
-.map-style {
-    color: #00adee;
+@import '~leaflet/dist/leaflet.css';
+
+.map-container {
+    position: relative;
+    background: grey;
+    width: 50vw;
+    height: 50vh;
+}
+
+.map-component {
+    position: absolute;
+    background: lightpink;
+    width: 100%;
+    height: 100%;
 }
