--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,6 +1,7 @@
 body {
-    background: #212121;
-    color: #f1f1f1;
+    background: #FAFBFC;
+    color: #212121;
+    font-family: Quicksand, sans-serif;
 }
 .app-title {
     color: red;
