--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,12 +1,12 @@
 body {
-    // background: #FAFBFC;
-    color: #212121;
+    background: #252526;
+    color: #d1d1d1;
     font-family: Quicksand, sans-serif;
 }
  .app-content {
      position: fixed;
      top: 4rem;
-     height: calc(100vh - 4rem);
+     height: calc(100vh - 6rem);
      left: 0;
      width: 100%;
      overflow-y: auto;
