updated tutorials page (can view markdown now)

--- a/src/app/components/footer/footer.scss
+++ b/src/app/components/footer/footer.scss
@@ -5,7 +5,7 @@ $footer-height: 2rem;
     left: 0;
     height: $footer-height;
     line-height: $footer-height;
-    background: rgba(grey, 0.1);
+    background: #222222;
     width: 100%;
     text-align: center;
     border-top: 1px solid rgba(grey, 0.3);
