--- a/src/app/components/navbar/navbar.scss
+++ b/src/app/components/navbar/navbar.scss
@@ -14,7 +14,7 @@
     left: 0;
     height: 2rem;
     line-height: 2rem;
-    background: #24292E;
+    background: #232323;
     color: white;
     display: flex;
     flex-direction: row;
