summary profile added

--- a/src/app/pages/tutorial/tutorial.scss
+++ b/src/app/pages/tutorial/tutorial.scss
@@ -2,12 +2,13 @@
     width: 100%;
     background: white;
     color: black;
+    margin-top: 0;
     top: 0;
     height: 100%;
 }
 
 .markdown {
-    max-width: 40rem;
+    max-width: 60rem;
     height: 100%;
     margin: {
         left: auto;
