--- a/src/app/components/navbar/navbar.scss
+++ b/src/app/components/navbar/navbar.scss
@@ -1,19 +1,16 @@
-@import '../../../ws-core/styles/mixins.scss';
+@import '../../../ws-core/sass/mixins.scss';
 
+$height: 2rem;
+$padding: 1rem;
 .navbar {
     @include box-shadow(0, 1px, 2px, rgba(0, 0, 0, 0.2));
     position: fixed;
-    width: calc(100% - 2rem);
-    padding: {
-        left: 1rem;
-        right: 1rem;
-        top: 0.75rem;
-        bottom: 0.75rem;
-    }
+    width: calc(100% - 2 * #{$padding});
+    padding: $padding;
     top: 0;
     left: 0;
-    height: 2rem;
-    line-height: 2rem;
+    height: $height;
+    line-height: $height;
     background: #232323;
     color: white;
     display: flex;
@@ -21,7 +18,7 @@
 
     label {
         color: #00adee;
-        height: 2rem;
+        height: $height;
     }
     $link-padding: 6rem;
     .links {
