--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -1,5 +1,15 @@
-img {
-    width: 128px;
-    height: auto;
-    border-radius: 50%;
+
+div.container {
+    position: relative;
+    width: 100vw;
+    height: 100%;
+    // background: red;
+    img {
+        position: absolute;
+        width: 128px;
+        height: auto;
+        margin-left: auto;
+        margin-right: auto;
+        border-radius: 50%;
+    }
 }
