--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -3,8 +3,8 @@ $col-active: green;
 // Overrides
 
 body {
-    background: #1a1a1a;
-    color: #d1d1d1;
+    background: #e1e1e1;
+    color: #333;
     font-family: Quicksand, sans-serif;
 }
  .app-content {
