--- a/src/app/components/profile/profile.scss
+++ b/src/app/components/profile/profile.scss
@@ -1,11 +1,12 @@
+$col-active: #28E0B5;
 .profile {
     position: fixed;
     left: 0;
     top: 0;
     height: 100vh;
     width: 20rem;
-    background: darken(#008aee, 10%);
-    color: white;
+    background: darken(#333, 10%);
+    color: #28E0B5;;
     text-align: center;
 
     .pic {
@@ -43,6 +44,7 @@
         box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
         transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
         &:hover {
+            color: #28E0B5;
             box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
         }
     }
@@ -52,14 +54,13 @@
             top: 1rem;
             bottom: 1rem;
         }
-        
     }
 
     .section {
         div {
             font-weight: lighter;
             font-size: 1.1rem;
-            color: rgba(white, 0.75);
+            color: rgba($col-active, 0.75);
             width: 100%;
             margin: {
                 top: 2rem;
