--- a/src/ws-core/sass/colors.scss
+++ b/src/ws-core/sass/colors.scss
@@ -3,7 +3,7 @@
 // $ws-col-green: #04A1B9;
 
 $ws-col-accent: #00FFEE;
-$ws-col-primary: #00AFEE;
+$ws-col-primary: #28E0B5;
 $ws-col-secondary: #2D363D;
 $ws-col-background: #1e1e1e;
 $ws-col-text: #F8F8F8;
