--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -1,9 +1,10 @@
+@import '../../../ws-core/sass/index.scss';
 
-div.container {
+.container {
     position: relative;
     width: 100vw;
     height: 100%;
-    // background: red;
+    background: $col-background;
     img {
         position: absolute;
         width: 128px;
@@ -12,4 +13,47 @@ div.container {
         margin-right: auto;
         border-radius: 50%;
     }
+}
+
+$padding: 3em;
+.content {
+    position: absolute;
+    width: 100vw;
+    color: #e1e1e1;
+
+    h1,h2,h3 {
+        margin-top: 0;
+        padding-top: 2em;
+    }
+}
+
+.panel {
+    position: relative;
+    display: block;
+    width: calc(100% - 2 * #{$padding});
+    padding: {
+        left: $padding;
+        right: $padding;
+    }
+    margin: 0;
+    width: 100%;
+    p {
+        margin: 0;
+        padding: {
+            top: 1em;
+            bottom: 1em;
+        }
+    }
+}
+
+.panel-light {
+    @extend .panel;
+    background: #e4e4e4;
+    color: black;
+}
+
+.panel-dark {
+    @extend .panel;
+    background: #3c3c3c;
+    color: #e4e4e4;
 }
