--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -6,7 +6,7 @@ $col-active: green;
 body {
     background: #e1e1e1;
     color: #333;
-    font-family: Quicksand, sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
  .app-content {
      position: fixed;
