finally added sidenav

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,6 +1,8 @@
 $col-active: green;
 @import '../sass/index.scss';
-@import '../ws-core/sass/index.scss';
+@import '~bilo-xui/dist/xui.scss';
+// @import '../ws-core/sass/index.scss';
+// @import '~/hamburgers/dist/hamburgers.scss';
 // Overrides
 
 body {
