--- a/src/ws-core/sass/forms.scss
+++ b/src/ws-core/sass/forms.scss
@@ -31,7 +31,7 @@ textarea {
     margin-bottom: 1em;
     max-width: 100%;
 }
-button {
+.button {
     background: transparent;
     color: $col-active;
     position: relative;
