--- a/src/app/components/navbar/navbar.scss
+++ b/src/app/components/navbar/navbar.scss
@@ -17,6 +17,16 @@ $padding: 1rem;
     display: flex;
     flex-direction: row;
 
+    i {
+        z-index: 12;
+        margin-right: 1em;
+        margin-top: 0.2em;
+        font-size: 1.5rem;
+        &:hover {
+            cursor: pointer;
+        }
+    }
+
     label {
         color: $col-active;
         height: $height;
