--- a/src/app/pages/contact/contact.scss
+++ b/src/app/pages/contact/contact.scss
@@ -1,4 +1,5 @@
-@import '../../../ws-core/sass/index.scss';
+// @import '../../../ws-core/sass/index.scss';
+@import '~bilo-xui/dist/xui.scss';
 // $col-active: red;
 .contact-container {
     background: $col-background;
