--- a/src/app/pages/tutorials/tutorials.scss
+++ b/src/app/pages/tutorials/tutorials.scss
@@ -1,17 +1,18 @@
-@import '../../../ws-core/sass/index.scss';
+@import '~bilo-ui/dist/bilo-ui.scss';
 @import '../../../sass/index.scss';
 
-.posts {
+.tut-container {
     background: $col-dark;
     color: $col-light;
     position: relative;
     height: 100%;
 }
-.posts-category {
-    padding-left: 2rem;
-    padding-right: 2rem;
-    overflow: hidden;
-    overflow-y: auto;
+
+.tut-content {
+    width: auto;
+    margin-left: 6em;
+    margin-right: 6em;
+    padding-top: 4em;
 }
 
 .posts-container {
