fixed scss imports

--- a/src/app/components/navbar/navbar.scss
+++ b/src/app/components/navbar/navbar.scss
@@ -1,5 +1,5 @@
-@import '../../../ws-core/sass/mixins.scss';
-@import '../../../ws-core/sass/colors.scss';
+@import '~bilo-ui/dist/scss/mixins.scss';
+@import '~bilo-ui/dist/scss/colors.scss';
 
 $height: 2rem;
 $padding: 1rem;
