--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -1,5 +1,4 @@
-@import '../../../ws-core/sass/index.scss';
-// @import '../../../app.scss';
+@import '~bilo-ui/dist/bilo-ui.scss';
 
 .container {
     position: relative;
