--- a/src/app/components/navbar/navbar.scss
+++ b/src/app/components/navbar/navbar.scss
@@ -1,5 +1,4 @@
-@import '~bilo-ui/dist/scss/mixins.scss';
-@import '~bilo-ui/dist/scss/colors.scss';
+@import '../../../app.scss';
 
 $height: 2rem;
 $padding: 1rem;
