--- a/src/app/pages/tutorials/style.scss
+++ b/src/app/pages/tutorials/style.scss
@@ -1,5 +1,5 @@
 @import '~bilo-ui/dist/bilo-ui.scss';
-@import '../../app.scss';
+@import '../../../app.scss';
 
 .tut-container {
     background: $col-background;
