--- a/src/app/components/navbar/navbar.scss
+++ b/src/app/components/navbar/navbar.scss
@@ -1,9 +1,9 @@
 @import '../../../app.scss';
 
-$height: 2rem;
 $padding: 1rem;
+$height: calc(#{$dim-navbar} - 2 * #{$padding});
 .navbar {
-    @include box-shadow(0, 1px, 2px, rgba(0, 0, 0, 0.2));
+    @include box-shadow(0, 1px, 2px, rgba(0, 0, 0, 0.5));
     position: fixed;
     width: calc(100% - 2 * #{$padding});
     padding: $padding;
@@ -26,9 +26,17 @@ $padding: 1rem;
         }
     }
 
-    label {
+    img {
+        width: $height;
+        height: $height;
+        margin-right: 1em;
+        cursor: pointer;
+    }
+
+    a {
         color: $col-active;
         height: $height;
+        text-decoration: none;
     }
     $link-padding: 6rem;
     .links {
