--- a/src/app/pages/not-found/style.scss
+++ b/src/app/pages/not-found/style.scss
@@ -1,29 +1,4 @@
-@import '~bilo-ui/dist/bilo-ui.scss';
-
-.not-found-container {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    background: url(../../../img/404-back1.jpg) no-repeat center center fixed; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-
-    .content {
-        position: relative;
-        max-width: 30em;
-        height: auto;
-        padding-top: 3em;
-        margin: {
-            left: auto;
-            right: auto;
-        }
-        display: block;
-    }
-}
-
-
+@import '../../../app.scss';
 
 .title {
     // position: relative;
