--- a/src/app.scss
+++ b/src/app.scss
@@ -3,7 +3,7 @@
 // Colors
 $col-lightgrey:  $col-lightgrey;
 $col-background: $col-background;
-$col-active: #5AC8E6 !global;
+$col-active: #00adee !global;
 $col-accent: #00ffee !global;
 $col-text: $col-text; 
 $col-dark: #1d1d1d;
