turned search into configurable component

--- a/src/app.scss
+++ b/src/app.scss
@@ -39,6 +39,9 @@ body {
     // background: $col-background;
     // color: $col-text;
     width: 100vw;
+}
+
+.page-padded {
     height: calc(100% - 2 * #{$padding});
     padding: $padding;
 }
