--- a/src/app/pages/playground/style.scss
+++ b/src/app/pages/playground/style.scss
@@ -1,2 +1,11 @@
 @import '~bilo-ui/dist/bilo-ui.scss';
 @import '../../../app.scss';
+
+.custom-input {
+  background: white;
+  margin: {
+    top: 1em;
+    bottom: 1em;
+  }
+  padding: 1em;
+}
