--- a/src/app.scss
+++ b/src/app.scss
@@ -23,17 +23,16 @@ body {
     color: #333;
     font-family: 'Quicksand', sans-serif;
 }
-.app-content {
-     position: fixed;
-     top: $dim-navbar;
-     height: $content-height;
-     left: 0;
-     width: 100%;
-     height: calc(100vh - #{$dim-navbar});
-     overflow-y: auto;
-     display: flex;
-     flex-direction: row;
- }
+// .app-content {
+//      position: fixed;
+//      top: $dim-navbar;
+//      left: 0;
+//      width: 100%;
+//      height: calc(100vh - #{$dim-navbar});
+//      overflow-y: auto;
+//      display: flex;
+//      flex-direction: row;
+//  }
  $padding: 2em;
 .page {
     position: relative;
