--- a/src/app/pages/tutorials/style.scss
+++ b/src/app/pages/tutorials/style.scss
@@ -28,7 +28,7 @@
     position: relative;
     // width: 12rem;
     // height: 10rem;
-    color: #333;
+    // color: #333;
     // background: rgba(white, 0.2);
     
     margin: 0.2rem;
