--- a/src/app/pages/draft-js/samples/style.scss
+++ b/src/app/pages/draft-js/samples/style.scss
@@ -1,5 +1,5 @@
 @import '~bilo-ui/dist/bilo-ui.scss';
-@import '../../../../app.scss';
+// @import '../../../../app.scss';
 
 .custom-input {
   @extend .input;
