--- a/src/app/pages/playground/plugin/issueSuggestionsEntryStyles.scss
+++ b/src/app/pages/playground/plugin/issueSuggestionsEntryStyles.scss
@@ -1,20 +1,19 @@
-.suggestionsEntry {
+.issueSuggestionsEntry {
   padding: 2px 0 0 2px;
   transition: background-color 0.4s cubic-bezier(0.27, 1.27, 0.48, 0.56);
   text-align: left;
-  color: black;
 }
 
-.suggestionsEntry:active {
+.issueSuggestionsEntry:active {
   background-color: #CCE7FF;
 }
 
-.suggestionsEntryFocused {
-  @extend .suggestionsEntry;
+.issueSuggestionsEntryFocused {
+  @extend .issueSuggestionsEntry;
   background-color: #E6F3FF;
 }
 
-.suggestionsEntryText {
+.issueSuggestionsEntryText {
   display: inline-block;
   margin-left: 2px;
   max-width: 360px;
@@ -26,4 +25,3 @@
 .bold {
   font-weight: bold;
 }
-
