added browser support checker

--- a/src/app/pages/playground/style.scss
+++ b/src/app/pages/playground/style.scss
@@ -1,1 +1,9 @@
 @import '../../../app.scss';
+
+.custom-warning-style {
+  background: orange;
+  color: black;
+  margin: 2em;
+  padding: 1em;
+  
+}
