adding code-sectin to xui

--- a/src/app/components/code-demo/style.scss
+++ b/src/app/components/code-demo/style.scss
@@ -2,6 +2,8 @@
 
 .code-block {
     .toggle {
+      position: relative;
+      float: right;
       &:hover {
         color: #00adee;
         cursor: pointer;
