--- a/src/app/components/code-demo/style.scss
+++ b/src/app/components/code-demo/style.scss
@@ -1,4 +1,5 @@
-@import '~highlight.js/styles/monokai.css';
+// @import '~highlight.js/styles/monokai.css';
+@import '~highlight.js/styles/atom-one-dark.css';
 
 .code-block {
     .toggle {
