--- a/src/app/components/code-demo/style.scss
+++ b/src/app/components/code-demo/style.scss
@@ -1,5 +1,6 @@
 // @import '~highlight.js/styles/monokai.css';
-@import '~highlight.js/styles/atom-one-dark.css';
+// @import '~highlight.js/styles/atom-one-dark.css';
+@import '~highlight.js/styles/vs2015.css';
 
 .code-block {
     .toggle {
