--- a/src/app/components/map/style.scss
+++ b/src/app/components/map/style.scss
@@ -1,15 +1,25 @@
-@import '~leaflet/dist/leaflet.css';
+// @import '~leaflet/dist/leaflet.css';
 
-.map-container {
-    position: relative;
-    background: grey;
-    width: 100%;
-    height: 100%;
-}
+// // Leaflet
+// .map-container {
+//     position: relative;
+//     background: grey;
+//     width: 100%;
+//     height: 100%;
+// }
 
-.map-component {
+// .map-component {
+//     position: absolute;
+//     background: rgba(#00adee, 0.1);
+//     width: 100%;
+//     height: 100%;
+// }
+
+// React Leaflet
+.map {
     position: absolute;
-    background: rgba(#00adee, 0.1);
     width: 100%;
     height: 100%;
+    top: 0;
+    left: 0;
 }
