--- a/src/pages/not-found/style.scss
+++ b/src/pages/not-found/style.scss
@@ -1,5 +1,5 @@
 @import '~bilo-ui/dist/bilo-ui.scss';
-@import '../../../app.scss';
+@import '../../app.scss';
 
 .title {
     // position: relative;
@@ -26,7 +26,7 @@
     position: relative;
     width: 100%;
     height: 100%;
-    background: url(../../../img/404-back1.jpg) no-repeat center center fixed; 
+    background: url(../../img/404-back1.jpg) no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
